--- a/photo.html
+++ b/photo.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>🥐 A picture of a croissant</title>
     <link rel="stylesheet" href=src/styles.css>
   </head>
   <body>
     <h1>🥐 A picture of a croissant</h1>
-    <img src="images/croissant.jpeg" class="img-fluid" />
+    <img src="images/croissant.jpeg" alt="image of a croissant" />
     <br />
-    <a href="index.html">Homepage</a>
+    <a href="/">Homepage</a>
     <a href="photo.html">Photo</a>
     <a href="contact.html">Contact</a>
   </body>
