changed some SEO optimization

--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="contact us about a perfect croissant" />
     <title>C🥐 ontact us</title>
+    <meta name="description" content="contact us about a perfect croissant" />
     <link rel="stylesheet" href=src/styles.css>
   </head>
   <body>
