--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="Page about the perfect croissant" />
     <title>The best croissant</title>
+    <meta name="description" content="Page about the perfect croissant" />
     <link rel="stylesheet" href=src/styles.css>
   </head>
   <body>
